[package]
name = "gale-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["tracing", "ws"] }
axum_typed_multipart = "0.16.0"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
http = "1.3.1"
jwt = "0.16.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
serde_yml = "0.0.12"
sha2 = "0.10.8"
sqlx = { version = "0.8.5", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "json",
    "chrono",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
zip = "3.0.0"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
base64 = "0.22.1"
axum-extra = { version = "0.10.1", features = ["cookie"] }
regex = "1.11.1"
rand = "0.9.2"
rustrict = "0.7.35"
futures-util = "0.3.31"
redis = { version = "0.32.4", features = ["tokio-comp"] }
